implement styling of calculator

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link rel="stylesheet" href="./assets/styles/calculator.css">
   </head>
   <body>
     <div class="container">
-      <div class="result"></div>
-      <div class="operation"></div>
+      <div class="result hov"></div>
+      <div class="operation hov"></div>
       <div class="keys clear">C</div>
       <div class="keys divide">/</div>
       <div class="keys multiply">X</div>
-      <div class="keys back"><-</div>
+      <div class="keys back">DEL</div>
       <div class="keys seven">7</div>
       <div class="keys eight">8</div>
-      <div class="keys nine"></div>
+      <div class="keys nine">9</div>
       <div class="keys minus">-</div>
       <div class="keys four">4</div>
       <div class="keys five">5</div>
@@ -26,6 +27,7 @@
       <div class="keys three">3</div>
       <div class="keys percent">%</div>
       <div class="keys zero">0</div>
+      <div class="keys point">.</div>
       <div class="keys equals">=</div>
     </div>
   </body>
