create buttons for keys

--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="./assets/styles/calculator.css">
+    <link rel="stylesheet" href="./assets/styles/calculator.css" />
   </head>
   <body>
     <div class="container">
       <div class="result hov"></div>
       <div class="operation hov"></div>
-      <div class="keys clear">C</div>
-      <div class="keys divide">/</div>
-      <div class="keys multiply">X</div>
-      <div class="keys back">DEL</div>
-      <div class="keys seven">7</div>
-      <div class="keys eight">8</div>
-      <div class="keys nine">9</div>
-      <div class="keys minus">-</div>
-      <div class="keys four">4</div>
-      <div class="keys five">5</div>
-      <div class="keys six">6</div>
-      <div class="keys plus">+</div>
-      <div class="keys one">1</div>
-      <div class="keys two">2</div>
-      <div class="keys three">3</div>
-      <div class="keys percent">%</div>
-      <div class="keys zero">0</div>
-      <div class="keys point">.</div>
-      <div class="keys equals">=</div>
+      <button onclick="muliplyAction()" class="keys clear">C</button>
+      <button onclick="muliplyAction()" class="keys divide">/</button>
+      <button onclick="muliplyAction()" class="keys multiply">X</button>
+      <button onclick="delAction()" class="keys del">DEL</button>
+      <button onclick="sevenAction()" class="keys seven">7</button>
+      <button onclick="eightAction()" class="keys eight">8</button>
+      <button onclick="nineAction()" class="keys nine">9</button>
+      <button onclick="minusAction()" class="keys minus">-</button>
+      <button onclick="fourAction()" class="keys four">4</button>
+      <button onclick="fiveAction()" class="keys five">5</button>
+      <button onclick="sixAction()" class="keys six">6</button>
+      <button onclick="plusAction()" class="keys plus">+</button>
+      <button onclick="oneAction()" class="keys one">1</button>
+      <button onclick="twoAction()" class="keys two">2</button>
+      <button onclick="threeAction()" class="keys three">3</button>
+      <button onclick="percentAction()" class="keys percent">%</button>
+      <button onclick="zeroAction()" class="keys zero">0</button>
+      <button onclick="pointAction()" class="keys point">.</button>
+      <button onclick="equalsAction()" class="keys equals">=</button>
     </div>
   </body>
 </html>
