create button onclick attributes in html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="result hov"></div>
-      <div class="operation hov"></div>
+      <div class="result hov"><div class="equals-to"></div></div>
+      <div class="operation hov">
+        <div class="numerator"></div>
+        <div class="operator"></div>
+        <div class="denominator"></div>
+      </div>
+
       <button onclick="muliplyAction()" class="keys clear">C</button>
       <button onclick="muliplyAction()" class="keys divide">/</button>
       <button onclick="muliplyAction()" class="keys multiply">X</button>
