implement functionality to display math operators

--- a/index.html
+++ b/index.html
@@ -15,25 +15,26 @@
         <div class="denominator"></div>
       </div>
 
-      <button onclick="muliplyAction()" class="keys clear">C</button>
-      <button onclick="muliplyAction()" class="keys divide">/</button>
-      <button onclick="muliplyAction()" class="keys multiply">X</button>
-      <button onclick="delAction()" class="keys del">DEL</button>
-      <button onclick="sevenAction()" class="keys seven">7</button>
-      <button onclick="eightAction()" class="keys eight">8</button>
-      <button onclick="nineAction()" class="keys nine">9</button>
-      <button onclick="minusAction()" class="keys minus">-</button>
-      <button onclick="fourAction()" class="keys four">4</button>
-      <button onclick="fiveAction()" class="keys five">5</button>
-      <button onclick="sixAction()" class="keys six">6</button>
-      <button onclick="plusAction()" class="keys plus">+</button>
-      <button onclick="oneAction()" class="keys one">1</button>
-      <button onclick="twoAction()" class="keys two">2</button>
-      <button onclick="threeAction()" class="keys three">3</button>
-      <button onclick="percentAction()" class="keys percent">%</button>
-      <button onclick="zeroAction()" class="keys zero">0</button>
-      <button onclick="pointAction()" class="keys point">.</button>
-      <button onclick="equalsAction()" class="keys equals">=</button>
+      <button onclick="keyAction(this)" class="keys ">C</button>
+      <button onclick="keyAction(this)" class="keys ">/</button>
+      <button onclick="keyAction(this)" class="keys ">*</button>
+      <button onclick="keyAction(this)" class="keys ">DEL</button>
+      <button onclick="keyAction(this)" class="keys ">7</button>
+      <button onclick="keyAction(this)" class="keys ">8</button>
+      <button onclick="keyAction(this)" class="keys ">9</button>
+      <button onclick="keyAction(this)" class="keys ">-</button>
+      <button onclick="keyAction(this)" class="keys ">4</button>
+      <button onclick="keyAction(this)" class="keys ">5</button>
+      <button onclick="keyAction(this)" class="keys ">6</button>
+      <button onclick="keyAction(this)" class="keys ">+</button>
+      <button onclick="keyAction(this)" class="keys ">1</button>
+      <button onclick="keyAction(this)" class="keys ">2</button>
+      <button onclick="keyAction(this)" class="keys ">3</button>
+      <button onclick="keyAction(this)" class="keys ">%</button>
+      <button onclick="keyAction(this)" class="keys ">0</button>
+      <button onclick="keyAction(this)" class="keys ">.</button>
+      <button onclick="keyAction(this)" class="keys equals">=</button>
     </div>
+  <script src="./assets/scripts/calculator.js"></script>
   </body>
 </html>
