create eventlistener and main function

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
         <div class="denominator"></div>
       </div>
 
-      <button onclick="keyAction(this)" class="keys ">C</button>
-      <button onclick="keyAction(this)" class="keys ">/</button>
-      <button onclick="keyAction(this)" class="keys ">*</button>
-      <button onclick="keyAction(this)" class="keys ">DEL</button>
-      <button onclick="keyAction(this)" class="keys ">7</button>
-      <button onclick="keyAction(this)" class="keys ">8</button>
-      <button onclick="keyAction(this)" class="keys ">9</button>
-      <button onclick="keyAction(this)" class="keys ">-</button>
-      <button onclick="keyAction(this)" class="keys ">4</button>
-      <button onclick="keyAction(this)" class="keys ">5</button>
-      <button onclick="keyAction(this)" class="keys ">6</button>
-      <button onclick="keyAction(this)" class="keys ">+</button>
-      <button onclick="keyAction(this)" class="keys ">1</button>
-      <button onclick="keyAction(this)" class="keys ">2</button>
-      <button onclick="keyAction(this)" class="keys ">3</button>
-      <button onclick="keyAction(this)" class="keys ">%</button>
-      <button onclick="keyAction(this)" class="keys ">0</button>
-      <button onclick="keyAction(this)" class="keys ">.</button>
-      <button onclick="keyAction(this)" class="keys equals">=</button>
+      <button id="key-c" class="keys">C</button>
+      <button id="divide" class="keys">/</button>
+      <button id="multiply" class="keys">*</button>
+      <button id="delete" class="keys">DEL</button>
+      <button id="key-seven" class="keys">7</button>
+      <button id="key-eight" class="keys">8</button>
+      <button id="key-nine" class="keys">9</button>
+      <button id="minus" class="keys">-</button>
+      <button id="key-four" class="keys">4</button>
+      <button id="key-five" class="keys">5</button>
+      <button id="key-six" class="keys">6</button>
+      <button id="add" class="keys">+</button>
+      <button type="button" id="key-one" class="keys">1</button>
+      <button id="key-two" class="keys">2</button>
+      <button id="key-three" class="keys">3</button>
+      <button id="percent" class="keys">%</button>
+      <button id="key-zero" class="keys">0</button>
+      <button id="key-point" class="keys">.</button>
+      <button id="equals" class="keys equals">=</button>
     </div>
-  <script src="./assets/scripts/calculator.js"></script>
+    <script src="./assets/scripts/calculator.js"></script>
   </body>
 </html>
