execute functionality to respond to key preses

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="key-seven" class="keys">7</button>
       <button id="key-eight" class="keys">8</button>
       <button id="key-nine" class="keys">9</button>
-      <button id="minus" class="keys">-</button>
+      <button id="subtract" class="keys">-</button>
       <button id="key-four" class="keys">4</button>
       <button id="key-five" class="keys">5</button>
       <button id="key-six" class="keys">6</button>
